--- a/booking/index.html
+++ b/booking/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Coaching Session - Eduflare</title>
-    <meta name="description" content="Book a personalized coaching session with expert game coaches at Eduflare.">
+
+    <title>Book Coaching Session | Eduflare Game Mentorship</title>
+
+    <meta name="description" content="Book a personalized gaming coaching session with expert mentors at Eduflare. Choose your game, schedule easily, and level up your skills today.">
+
+    <meta name="keywords" content="book coaching session, eduflare coaching, gaming mentors, schedule game session, esports training, personalized game help, pro coach booking, game improvement, online coaching, eduflare booking">
+
+    <link rel="canonical" href="https://eduflare.org/book-session/">
+
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
     <script>
         tailwind.config = {
             theme: {
@@ -25,6 +35,7 @@
         }
     </script>
 </head>
+
 <body class="bg-dark text-white">
     <!-- Navigation -->
     <nav class="fixed top-0 left-0 right-0 bg-dark/95 backdrop-blur-sm border-b border-gray-800 z-40">
