--- a/coaches/apex.html
+++ b/coaches/apex.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduflare - Apex Legends Coaches</title>
-    <meta name="description" content="Find expert Apex Legends coaches at Eduflare to master battle royale gameplay.">
-    <meta name="keywords" content="apex legends coaching, gaming coaching, esports training, apex coach">
-    <link rel="canonical" href="https://eduflare.org/apex.html">
+    <title>Apex Legends Coaching | Pro Apex Coaches at Eduflare</title>
+    <meta name="description" content="Level up your Apex Legends gameplay with expert coaching from professional Apex coaches at Eduflare. Train smarter, win more, and climb ranks.">
+    <meta name="keywords" content="apex legends coaching, apex coach, apex pro coach, apex training, battle royale coaching, eduflare apex legends, esports coaching, apex rank improvement, gaming mentor, online apex coach">
+    <link rel="canonical" href="https://eduflare.org/apex/">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -26,6 +26,7 @@
         }
     </script>
 </head>
+
 <body class="bg-dark-light text-white">
     <!-- Cookie Consent Banner -->
     <div
