--- a/coaches/cs2.html
+++ b/coaches/cs2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduflare - Counter-Strike 2 Coaches</title>
-    <meta name="description" content="Find expert Counter-Strike 2 coaches at Eduflare to master tactical FPS gameplay.">
-    <meta name="keywords" content="cs2 coaching, counter-strike coaching, esports training, cs2 coach">
-    <link rel="canonical" href="https://eduflare.org/cs2.html">
+    <title>Counter-Strike 2 Coaching | Pro CS2 Coaches at Eduflare</title>
+    <meta name="description" content="Join Eduflare to connect with top-tier Counter-Strike 2 coaches who specialize in tactical FPS training, strategic team play, and individual skill development. Whether you're a casual player aiming to improve or a competitive gamer seeking high-level insights, our CS2 coaching program is designed to elevate your gameplay, sharpen your decision-making, and help you dominate ranked matches and tournaments. Book personalized sessions with experienced esports coaches and transform your CS2 performance with structured guidance.">
+    <meta name="keywords" content="cs2 coaching, counter-strike coaching, esports training, cs2 coach, counter-strike 2 trainer, fps coaching, tactical fps training, cs2 pro coach, gaming mentor, eduflare cs2">
+    <link rel="canonical" href="https://eduflare.org/cs2/">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -26,6 +26,7 @@
         }
     </script>
 </head>
+
 <body class="bg-dark-light text-white">
     <!-- Cookie Consent Banner -->
     <div
