--- a/coaches/dota2.html
+++ b/coaches/dota2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduflare - Dota 2 Coaches</title>
-    <meta name="description" content="Find expert Dota 2 coaches at Eduflare to master MOBA gameplay.">
-    <meta name="keywords" content="dota 2 coaching, gaming coaching, esports training, dota coach">
-    <link rel="canonical" href="https://eduflare.org/dota2.html">
+    <title>Dota 2 Coaching | Pro MOBA Coaches at Eduflare</title>
+    <meta name="description" content="Unlock your full potential in Dota 2 with personalized coaching sessions from experienced MOBA professionals at Eduflare. Our expert coaches help you refine your hero pool, improve game sense, enhance map awareness, and develop winning strategies tailored to your playstyle. Whether you're climbing the ranked ladder or preparing for competitive tournaments, Eduflare provides structured, insightful guidance to elevate your performance in every match. Learn from the best and dominate the Dota 2 battlefield with confidence.">
+    <meta name="keywords" content="dota 2 coaching, dota coach, moba coaching, eduflare dota 2, gaming coaching, esports training, ranked dota help, pro moba coach, dota training, competitive dota guide">
+    <link rel="canonical" href="https://eduflare.org/dota2/">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -26,6 +26,7 @@
         }
     </script>
 </head>
+
 <body class="bg-dark-light text-white">
     <!-- Cookie Consent Banner -->
     <div
